--- a/src/views/anime/anime-list-mobile.ejs
+++ b/src/views/anime/anime-list-mobile.ejs
@@ -87,7 +87,7 @@
                 <a href="/news" class="block px-4 py-2 text-gray-700 hover:bg-orange-100 transition duration-300 hover:pl-5">
                     <i class="fa-solid fa-newspaper mr-2"></i> Noticias
                 </a>
-                <a href="/" class="block px-4 py-2 text-gray-700 hover:bg-orange-100 transition duration-300 hover:pl-5">
+                <a href="/animes/api/search" class="block px-4 py-2 text-gray-700 hover:bg-orange-100 transition duration-300 hover:pl-5">
                     <i class="fa-solid fa-magnifying-glass mr-2"></i> Buscador
                 </a>
 
